[metadata]
name = contrail-api-server
summary = Contrail VNC Configuration API Server Implementation
description-file = README.rst
license = Apache-2
author = OpenContrail
author-email = dev@lists.opencontrail.org
home-page = http://www.opencontrail.org/documentation/api/r4.0/
version = 0.1.0
classifier =
    Environment :: OpenContrail
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    vnc_cfg_api_server

[entry_points]
console_scripts =
    contrail-api = vnc_cfg_api_server.api_server:server_main
    contrail-db-check = vnc_cfg_api_server.db_manage:db_check

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html
